--- a/ManageGo/Views/EditTicketDetailsView.xaml
+++ b/ManageGo/Views/EditTicketDetailsView.xaml
@@ -102,7 +102,10 @@
                         <StackLayout IsVisible="{Binding CategoryOptionsVisible}">
                             <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                             <controls:NestedListView  ItemsSource="{Binding Categories}" VerticalOptions="Start" SeparatorVisibility="None" SelectionMode="None" HeightRequest="125" >
-                                 <ListView.ItemTemplate>
+                                <x:Arguments>
+                                    <ListViewCachingStrategy>RecycleElement</ListViewCachingStrategy>
+                                </x:Arguments>
+                                <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <ViewCell>
                                             <StackLayout Orientation="Horizontal" VerticalOptions="FillAndExpand" Padding="0,12,0,0">
@@ -130,7 +133,10 @@
                         <StackLayout IsVisible="{Binding TagOptionsVisible}">
                             <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                             <controls:NestedListView  ItemsSource="{Binding Tags}" VerticalOptions="Start" SeparatorVisibility="None" SelectionMode="None" HeightRequest="125" >
-                                 <ListView.ItemTemplate>
+                                <x:Arguments>
+                                    <ListViewCachingStrategy>RecycleElement</ListViewCachingStrategy>
+                                </x:Arguments>
+                                <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <ViewCell>
                                             <StackLayout Orientation="Horizontal" VerticalOptions="FillAndExpand" Padding="0,12,0,0">
@@ -160,7 +166,10 @@
                         <StackLayout IsVisible="{Binding AssignedOptionsVisible}">
                             <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                             <controls:NestedListView  ItemsSource="{Binding Users}" VerticalOptions="Start" SeparatorVisibility="None" SelectionMode="None" HeightRequest="125" >
-                                 <ListView.ItemTemplate>
+                                <x:Arguments>
+                                    <ListViewCachingStrategy>RecycleElement</ListViewCachingStrategy>
+                                </x:Arguments>
+                                <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <ViewCell>
                                             <StackLayout Orientation="Horizontal" VerticalOptions="FillAndExpand" Padding="0,12,0,0">
